--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
         
     </head>
     <body>
-        <h1>Hello World - George Ajileye</h1>
+        <h1>Hello World - George</h1>
         <!--Add a paragraph about yourself-->
         <p>
          I go by George Ajileye. I am an international student who recently graduated from York University's digital marketing program. 
