--- a/html/index.html
+++ b/html/index.html
@@ -21,7 +21,7 @@
         <H4>Which of these answers about me do you believe is incorrect?</H4>
         <!--- Add a list of answers to the <H4> questions-->
         <ul>
-            <li>I am South African</li>
+            <li>My favourite sport is basket ball/li>
             <li>I spend more than seven hours a day listening to music.</li>
             <li>My favourite sport is soccer</li>
         </ul>
