--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
         <h1>Hello World - George</h1>
         <!--Add a paragraph about yourself-->
         <p>
-         I go by George Ajileye. I am an international student who recently graduated from York University's digital marketing program. 
+         I go by George Ajileye. I am an international student.
         </p>
         <img class="im" src="/helloWorld/html/images/Skate.jpg">
         <!-- An image that represents myself
@@ -21,13 +21,13 @@
         <H4>Which of these answers about me do you believe is incorrect?</H4>
         <!--- Add a list of answers to the <H4> questions-->
         <ul>
-            <li>My favourite sport is basket ball/li>
+            <li>My favourite sport is basket ball</li>
             <li>I spend more than seven hours a day listening to music.</li>
             <li>My favourite sport is soccer</li>
         </ul>
         <!--- Add a button element that alert the message when clicked-->
 
-        <button type="button" onclick="alert('I am South African is the wrong answer ')">Click to reveal the wrong answer</button>
+        <button type="button" onclick="alert(' My favourite sport is basket ball')">Click to reveal the wrong answer</button>
         
     </body>
     <script>
