--- a/html/index.html
+++ b/html/index.html
@@ -14,6 +14,7 @@
         <p>
          I go by George Ajileye. I am an international student.
         </p>
+        <p>paragraph added</p>
         <img class="im" src="/helloWorld/html/images/Skate.jpg">
         <!-- An image that represents myself
         and my hobbies -->
