--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,7 @@
     </head>
     <body>
         <h1>Hello World - George</h1>
+        <h1>add a header tag</h1>
         <!--Add a paragraph about yourself-->
         <p>
          I go by George Ajileye. I am an international student.
