--- a/html/index.html
+++ b/html/index.html
@@ -15,6 +15,9 @@
         <p>
          I go by George Ajileye. I am an international student.
         </p>
+        <div>
+            
+        </div>
         <p>paragraph added</p>
         <img class="im" src="/helloWorld/html/images/Skate.jpg">
         <!-- An image that represents myself
