--- a/html/index.html
+++ b/html/index.html
@@ -16,10 +16,10 @@
          I go by George Ajileye. I am an international student.
         </p>
         <div>
-            
+
         </div>
         <p>paragraph added</p>
-        <img class="im" src="/helloWorld/html/images/Skate.jpg">
+        <img class="im" src="C:\Users\USER\Desktop\WDD126-week2\images\HEA.jpg">
         <!-- An image that represents myself
         and my hobbies -->
 
